[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/UnitForm/unit_form.gd" type="Script" id=1]

[node name="UnitForm" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="CenterContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 100.0
margin_bottom = 40.0
rect_min_size = Vector2( 100, 0 )

[node name="SectionLabel" type="Label" parent="HBoxContainer/CenterContainer"]
margin_top = 13.0
margin_right = 100.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Section"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 354.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 0 )

[node name="QuestionLabel" type="Label" parent="HBoxContainer/MarginContainer"]
margin_top = 13.0
margin_right = 250.0
margin_bottom = 27.0
text = "Question"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 358.0
margin_right = 608.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 0 )

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/MarginContainer2"]
margin_right = 250.0
margin_bottom = 40.0

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
margin_left = 612.0
margin_right = 692.0
margin_bottom = 40.0
rect_min_size = Vector2( 80, 0 )

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/MarginContainer3"]
margin_right = 80.0
margin_bottom = 40.0
size_flags_horizontal = 3
text = "Status"
